# vllm-explore

./: .gitignore  AGENT.md  README.md  pyproject.toml  report.md
benchmarks/: gemma4.json
benchmarks/context/: wiki_computing_pioneers.txt  wiki_us_space_programs.txt
results/: final-benchmark-results.csv
src/vllm_explore/: __init__.py  __main__.py  benchmark.py  mlx_lm_worker.py
