[project]
name = "vllm-explore"
version = "0.1.0"
description = "Local-first experiments for agentic workflows and LLM runtime benchmarking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tiktoken>=0.9.0",
    "transformers>=4.51.0",
]

[project.scripts]
vllm-explore = "vllm_explore:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
